Añadí mi nombre, actualicé un poco el html y modifiqué un porquito los nombres de los demás para que usen los términos de html para las tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,4 +1,6 @@
-<html>
+<!DOCTYPE html>
+<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="es">
     <head>
         <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
@@ -6,26 +8,27 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.png" />
+                <img id="logo" src="imagenes/dragon.png" alt="dragon"/>
                 Hyperblog
                 <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
+                <p><img src="imagenes/equipo.jpg" width="100%" alt="equipo"/></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
 
-                <p>Sergio Iván Piñón Peña</p>
-                <p>Edgar Barragán</p>
+                <p>Juan Jos&eacute; Arcila Valderrama</p>
+                <p>Sergio Iv&aacute;n Piñ&oacute;n Peña</p>
+                <p>Edgar Barrag&aacute;n</p>
                 <p>@luiscarlos</p>
-                <p>Christopher Andrés Acevedo Galo</p>
+                <p>Christopher Andr&eacute;s Acevedo Galo</p>
                 <p>Moises Patiño</p>  
                 <p>Ismael Dominguez Moreno</p>
                 <p>Edgar Hern&aacute;ndez</p>
                 <p>rafaelrrp</p>
-              	<p>Giselle Castillo</p>
+                <p>Giselle Castillo</p>
                 <p>@centenarioalta</p>
                 <p>JuanDC</p>
                 <p>@elyager</p>
@@ -45,7 +48,7 @@
                 <p>Ildebrando</p>
                 <p>gonzalo986</p>
                 <p>Norbs</p>
-                <p>José Gregorio Hernández Arciles</p>
+                <p>Jos&eacute; Gregorio Hern&aacute;ndez Arciles</p>
                 <p>Erik</p>
                 <p>Irvingsan</p>
                 <p>Mauricio Alejandro Escobar Sejas</p>
@@ -56,7 +59,7 @@
                 <p>@Yerko0</p>
                 <p>Eden Verdugo</p>
                 <p>Alex Abel Lerman</p>
-                <p>Víctor Landa</p>
+                <p>V&iacute;ctor Landa</p>
                 <p>Pablo C&oacute;rdoba</>
                 <p>FixingMind5</p>
                 <p>Max88</p>
@@ -835,7 +838,7 @@
                 <p>Juan Carlos Carbajal Salgado</p>
             </div>
             <div id="footer">
-              Hecho con amor en Platzi &lt;3
+                Hecho con amor en Platzi &lt;3
             </div>
         </div>
     </body>
